--- a/sample_rails/Gemfile
+++ b/sample_rails/Gemfile
@@ -5,3 +5,9 @@ source "https://rubygems.org"
 git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 
 # gem "rails"
+
+gem "rails", "~> 5.2"
+
+group :test do
+  gem 'rspec-rails', require: false
+end
